hacked fcbkcomplete to remove xss protection and allow tags containing the word 'script'

--- a/config/dm/assets.yml
+++ b/config/dm/assets.yml
@@ -2,7 +2,7 @@ js:
 
   dmTagPlugin:
 
-    fcbkcomplete:     jquery.fcbkcomplete.min
+    fcbkcomplete:     jquery.fcbkcomplete.min.hack
     launcher:         launcher
 
 css:
